Design ohne Logik fertig

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
 <div style="display:flex;gap:8px;flex-direction:column;">
 <div class="controls">
-<button class="btn" id="undo">Rückgängig</button>
+<button class="btn" id="undo">Löschen</button>
 <button class="btn primary" id="submit">Einreichen</button>
+<button class = "btn start" id = "startAufgebeButton" onclick="startAufgeben()">Starten</button>
 </div>
 <div class="hint">Tipp: Klicke eine Farbe und dann die Löcher deiner Reihe.</div>
 </div>
