Nur noch Win detection und feedback setzung fehlen

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
 <div class="secret" id="secret">
 <!-- secret pegs (hidden in game) -->
-<div class="peg" style="background:#122;opacity:0.15;border:none;border-radius:6px;width:40px;height:40px"></div>
-<div class="peg" style="background:#122;opacity:0.15;border:none;border-radius:6px;width:40px;height:40px"></div>
-<div class="peg" style="background:#122;opacity:0.15;border:none;border-radius:6px;width:40px;height:40px"></div>
-<div class="peg" style="background:#122;opacity:0.15;border:none;border-radius:6px;width:40px;height:40px"></div>
+<div class="peg" style="background:#122;border:none;border-radius:6px;width:40px;height:40px"></div>
+<div class="peg" style="background:#122;border:none;border-radius:6px;width:40px;height:40px"></div>
+<div class="peg" style="background:#122;border:none;border-radius:6px;width:40px;height:40px"></div>
+<div class="peg" style="background:#122;border:none;border-radius:6px;width:40px;height:40px"></div>
 </div>
 
 
