Im Prinzip fertig, vielleicht paar Feinheiten

--- a/index.html
+++ b/index.html
@@ -43,7 +43,16 @@
 <button class="btn primary" id="submit">Einreichen</button>
 <button class = "btn start" id = "startAufgebeButton" onclick="startAufgeben()">Starten</button>
 </div>
-<div class="hint">Tipp: Klicke eine Farbe und dann die Löcher deiner Reihe.</div>
+<div class="instructions">
+
+    <div class="hint">Tipp: Starte das spiel</div> 
+    <div class = "hint">Klicke eine Farbe und dann die Löcher in deiner Reihe.</div>
+    <div class = "hint">Nach dem Einreichen wird geprüft ob deine Eingabe richtig war</div>
+    <p>
+        <div class = "hint">🔴 Roter Pin → Eine richtige Farbe an der richtigen Stelle</div>
+        <div class = "hint">⚪ Weißer Pin → Eine richtige Farbe an der falschen Stelle</div>
+    </p>
+</div>
 </div>
 </aside>
 </div>
