--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div class="instructions">
 
     <div class="hint">Tipp: Starte das spiel</div> 
-    <div class = "hint">Klicke eine Farbe und dann die Löcher in deiner Reihe.</div>
+    <div class = "hint">Klicke eine Farbe (oder wähle mit 1-6 aus) und dann die Löcher in deiner Reihe.</div>
     <div class = "hint">Nach dem Einreichen wird geprüft ob deine Eingabe richtig war</div>
     <p>
         <div class = "hint">🔴 Roter Pin → Eine richtige Farbe an der richtigen Stelle</div>
